# ankha

./: Cargo.toml  README.md  justfile
crates/ankha/: Cargo.toml
crates/ankha/src/: lib.rs  library.rs  parser.rs  script.rs
crates/auri/: Cargo.toml
demos/calcite/: Cargo.toml
demos/calcite/src/: library.rs  main.rs  parser.rs
resources/: package.ankha  package.auri  package.lexpr  package0.auri  syntax.ankha
