[package]
name = "ankha"
version = "0.2.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Ankha scripting toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/Ankha"
repository = "https://github.com/PsichiX/Ankha"
documentation = "https://docs.rs/ankha"
readme = "../../README.md"

[dependencies]
typid = "1"
intuicio-data = "0.46"
intuicio-core = "0.46"
intuicio-derive = "0.46"
intuicio-parser = "0.46"
intuicio-backend-vm = "0.46"
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
serde-lexpr = "0.1"
